--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>jpinedadev | Portfolio</title>
+    <title>JPinedaDev | Portfolio</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="assets/bootstrap-5.3.1/css/bootstrap.min.css" rel="stylesheet"/>
@@ -9,6 +9,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="body container">
+
     <!--navbar-->
     <nav class="my_navbar navbar navbar-expand-lg m-lg-5 ">
       <div class="container-fluid">
@@ -39,9 +40,9 @@
     </nav>
 
     <!--hero-->
-    <main class="my__hero row mx-lg-5 my-5">
+    <main class="my__hero row mx-lg-5">
       <div class="my__hero--image col-lg ">
-        <img src="images/profile.jpeg" 
+        <img src="images/pf1.png" 
           class="img-fluid rounded-circle" alt="profile image">
       </div>
       <div class="my__hero--content col-lg gap-2 lead">
@@ -60,8 +61,36 @@
     </main>
 
     <!--about-->
-    <div class="about">
-      <h2>ABOUT</h2>
+    <div class="about  m-lg-5 ">
+      <div class="about--head text-center my-5">
+        <p>Get To Know More <i class="bi bi-caret-down-fill"></i></p>
+        <h1>About Me</h1>       
+      </div>
+
+      <div class="about__box row gap-4">
+        <div class="about__box--img col-lg-4">
+          <img src="images/pf4.png" class="img-fluid rounded" alt="about image">
+        </div>
+        <div class="about__box--card col-lg mt-3">
+          <div class="about__box--card-history row gap-5 mx-1 mx-lg-0">
+            <div class="about__box--card--experience col-lg">
+              <i class="bi bi-award"></i>
+              <h5>Experience</h5>
+              <span>1+ years</span><br>
+              <span>Fullstack Developer</span>
+            </div>
+            <div class="about__box--card--education col-lg">
+              <i class="bi bi-people-fill"></i>
+              <h5>Education</h5>
+              <span>Bachelors Degree</span><br>
+              <span>Fullstack Bootcamp</span>
+            </div>
+          </div>
+          <div class="mt-3 lead">
+           <p>I'm a very organized person, I always plan everything and meditate on my decisions, I love the world of technology, I have experience working as a freelancer on Fiverr developing websites with frontend and backend technologies.   </p> 
+          </div>
+        </div>
+      </div>
     </div>
 
     <!--experience-->
