--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="assets/bootstrap-5.3.1/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+	  <script src="https://kit.fontawesome.com/12e6288dad.js" crossorigin="anonymous"></script>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="body container">
@@ -62,40 +63,76 @@
 
     <!--about-->
     <div class="about  m-lg-5 ">
+
       <div class="about--head text-center my-5">
         <p>Get To Know More <i class="bi bi-caret-down-fill"></i></p>
         <h1>About Me</h1>       
       </div>
 
       <div class="about__box row gap-4">
+
         <div class="about__box--img col-lg-4">
           <img src="images/pf4.png" class="img-fluid rounded" alt="about image">
         </div>
+
         <div class="about__box--card col-lg mt-3">
           <div class="about__box--card-history row gap-5 mx-1 mx-lg-0">
+
             <div class="about__box--card--experience col-lg">
               <i class="bi bi-award"></i>
               <h5>Experience</h5>
               <span>1+ years</span><br>
               <span>Fullstack Developer</span>
             </div>
+
             <div class="about__box--card--education col-lg">
               <i class="bi bi-people-fill"></i>
               <h5>Education</h5>
               <span>Bachelors Degree</span><br>
               <span>Fullstack Bootcamp</span>
             </div>
+
           </div>
+
           <div class="mt-3 lead">
            <p>I'm a very organized person, I always plan everything and meditate on my decisions, I love the world of technology, I have experience working as a freelancer on Fiverr developing websites with frontend and backend technologies.   </p> 
           </div>
+
         </div>
       </div>
     </div>
 
     <!--experience-->
-    <div class="experience">
-      <h2>EXPERIENCE</h2>
+    <div class="experience m-lg-5 ">
+      
+      <div class="about--head text-center my-5">
+        <p>Explore My <i class="bi bi-caret-down-fill"></i></p>
+        <h1>Experience</h1>       
+      </div>
+
+      <div class="experience__box">
+        <div class="experience__box--icons text-center">
+          <i class="fa-brands fa-python"
+            data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Python"></i>
+          <i class="fa-brands fa-square-git"
+            data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Git"></i>
+          <i class="fa-brands fa-html5" 
+            data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="HTML"></i>
+          <i class="fa-brands fa-css3-alt"
+            data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="CSS"></i>
+          <i class="fa-brands fa-bootstrap"
+            data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Bootstrap"></i>
+          <i class="fa-brands fa-square-js"
+            data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="JavaScript"></i>
+          <i class="fa-brands fa-node-js"
+            data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="NodeJS"></i>
+          <i class="fa-brands fa-react"
+            data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="React"></i>
+          <i class="fa-brands fa-sass"
+            data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Sass"></i>
+
+        </div>
+      </div>
     </div>
 
     <!--projects-->
@@ -117,4 +154,8 @@
 
   </body>
   <script src="assets/bootstrap-5.3.1/js/bootstrap.bundle.min.js"></script>
+  <script>
+    const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+    const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+  </script>
 </html>
