--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
           <button type="button" class="btn btn-dark">Contact info</button>
         </div>
         <div class="my__hero--icons">
-          <i class="bi bi-linkedin"></i>
-          <i class="bi bi-github"></i>
+          <i class="bi bi-linkedin icon-sm"></i>
+          <i class="bi bi-github icon-sm"></i>
         </div>
       </div>
     </main>
@@ -72,7 +72,7 @@
       <div class="about__box row gap-4">
 
         <div class="about__box--img col-lg-4">
-          <img src="images/pf4.png" class="img-fluid rounded" alt="about image">
+          <img src="images/pf4.png" class="img-fluid" alt="about image">
         </div>
 
         <div class="about__box--card col-lg mt-3">
@@ -95,7 +95,11 @@
           </div>
 
           <div class="mt-3 lead">
-           <p>I'm a very organized person, I always plan everything and meditate on my decisions, I love the world of technology, I have experience working as a freelancer on Fiverr developing websites with frontend and backend technologies.   </p> 
+            <p> 
+                I'm a very organized person, I always plan everything and meditate on my decisions, 
+                I love the world of technology, I have experience working as a freelancer on Fiverr developing 
+                websites with frontend and backend technologies.
+            </p> 
           </div>
 
         </div>
@@ -130,24 +134,74 @@
             data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="React"></i>
           <i class="fa-brands fa-sass"
             data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Sass"></i>
-
         </div>
       </div>
     </div>
 
     <!--projects-->
-    <div class="projects">
-      <h2>PROJECTS</h2>
+    <div class="projects  m-lg-5 mx-3">
+      <div class="text-center">
+        <p>Browse My Recent<i class="bi bi-caret-down-fill"></i></p>
+        <h1>Projects</h1>       
+      </div>
+
+      <div class="projects__box row gap-4">
+
+        <div class="projects__box--card col-md text-center">
+          <div class="projects__box--card--image">
+            <img src="images/project-2.png" class="img-fluid rounded" alt="project">
+          </div>
+          <h4 class="my-3">Project One</h4>
+          <div class="projects__box--card--buttons">
+            <button type="button" class="btn btn-outline-secondary">Github</button>
+            <button type="button" class="btn btn-outline-secondary">Live Demo</button>
+          </div>
+        </div>
+
+        <div class="projects__box--card col-md text-center">
+          <div class="projects__box--card--image">
+            <img src="images/project-2.png" class="img-fluid rounded" alt="project">
+          </div>
+          <h4 class="my-3">Project Two</h4>
+          <div class="projects__box--card--buttons">
+            <button type="button" class="btn btn-outline-secondary">Github</button>
+            <button type="button" class="btn btn-outline-secondary">Live Demo</button>
+          </div>
+        </div>
+
+        <div class="projects__box--card col-md text-center">
+          <div class="projects__box--card--image">
+            <img src="images/project-2.png" class="img-fluid rounded" alt="project">
+          </div>
+          <h4 class="my-3">Project Three</h4>
+          <div class="projects__box--card--buttons">
+            <button type="button" class="btn btn-outline-secondary">Github</button>
+            <button type="button" class="btn btn-outline-secondary">Live Demo</button>
+          </div>
+        </div>
+
+      </div>
     </div>
 
-    <!--contact-->
-    <div class="contact">
-      <h2>CONTACT</h2>
-    </div>
-
-    <footer class="footer">
-      <h2>footer</h2>
-    </footer>
+    <!--Footer-->
+    <footer class="footer row m-4 ">
+			<div class="footer__icons col">
+				<a href="https://www.linkedin.com/in/jpinedadev/" target="_blank">
+				<i class="bi bi-linkedin  icon-sm"></i></a>
+				<a href="https://github.com/jpinedadev" target="_blank">
+					<i class="bi bi-github  icon-sm"></i></a>
+				<a href="@mailto:jpinedadeveloper@gmail.com">
+					<i class="bi bi-envelope-fill icon-sm"></i></a>
+			</div>
+			<div class="footer__text col">
+				<span>© 
+					<script>
+						document.write(new Date().getFullYear())
+					</script> 
+					JPinedaDev
+				</span>
+			</div>
+		</footer>
 
 
 
