:sparkles: New features
add new animations

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link href="assets/bootstrap-5.3.1/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 	  <script src="https://kit.fontawesome.com/12e6288dad.js" crossorigin="anonymous"></script>
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="body container">
 
     <!--navbar-->
-    <nav class="my_navbar navbar navbar-expand-lg m-lg-5 ">
+    <nav class="my_navbar navbar navbar-expand-lg mx-lg-5" data-aos="fade-down">
       <div class="container-fluid">
         <a class="navbar-brand my__navbar--brand" href="#">JPinedaDev</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
@@ -41,22 +43,28 @@
     </nav>
 
     <!--hero-->
-    <main class="my__hero row mx-lg-5">
-      <div class="my__hero--image col-lg ">
-        <img src="images/pf1.png" 
-          class="img-fluid rounded-circle" alt="profile image">
+    <main class="my__hero" id="vanta">
+      <div class="my__hero--image mx-auto text-center" data-aos="zoom-in-up">
+        <img src="images/avatar.svg" class="img-fluid" alt="profile image">
       </div>
-      <div class="my__hero--content col-lg gap-2 lead">
-        <span>Hello I'm</span>
+      <div class="my__hero--content text-center mx-auto" data-aos="zoom-in-up">
         <span class="my__hero--text">JPinedaDev</span>
-        <h3>Fullstack Developer</h3>
+        <h3>
+          <span class="typer" id="main" data-words="Fullstack., Frontend., Backend." 
+            data-delay="100" data-deleteDelay="1000" data-colors="teal,chocolate,purple"></span>
+          <span class="cursor" data-owner="main"></span>
+        </h3>
         <div class="my__hero--buttons">
           <button type="button" class="btn btn-outline-secondary">Download CV</button>
           <button type="button" class="btn btn-dark">Contact info</button>
         </div>
-        <div class="my__hero--icons">
-          <i class="bi bi-linkedin icon-sm"></i>
-          <i class="bi bi-github icon-sm"></i>
+        <div class="my__hero--icons my-3">
+				  <a href="https://www.linkedin.com/in/jpinedadev/" target="_blank">
+				    <i class="bi bi-linkedin  icon-sm"></i></a>
+				  <a href="https://github.com/jpinedadev" target="_blank">
+					  <i class="bi bi-github  icon-sm"></i></a>
+				  <a href="@mailto:jpinedadeveloper@gmail.com">
+					  <i class="bi bi-envelope-fill icon-sm"></i></a>
         </div>
       </div>
     </main>
@@ -71,11 +79,11 @@
 
       <div class="about__box row gap-4">
 
-        <div class="about__box--img col-lg-4">
-          <img src="images/pf4.png" class="img-fluid" alt="about image">
+        <div class="about__box--img col-lg-4" data-aos="fade-right">
+          <img src="images/about2.png" class="img-fluid" alt="about image">
         </div>
 
-        <div class="about__box--card col-lg mt-3">
+        <div class="about__box--card col-lg mt-3" data-aos="fade-left">
           <div class="about__box--card-history row gap-5 mx-1 mx-lg-0">
 
             <div class="about__box--card--experience col-lg">
@@ -116,23 +124,23 @@
 
       <div class="experience__box">
         <div class="experience__box--icons text-center">
-          <i class="fa-brands fa-python"
-            data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Python"></i>
-          <i class="fa-brands fa-square-git"
+          <i class="fa-brands fa-python" data-aos="flip-down" data-aos-delay="300"
+            data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Python" ></i>
+          <i class="fa-brands fa-square-git" data-aos="flip-down" data-aos-delay="400"
             data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Git"></i>
-          <i class="fa-brands fa-html5" 
+          <i class="fa-brands fa-html5" data-aos="flip-down" data-aos-delay="500" 
             data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="HTML"></i>
-          <i class="fa-brands fa-css3-alt"
+          <i class="fa-brands fa-css3-alt" data-aos="flip-down" data-aos-delay="600"
             data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="CSS"></i>
-          <i class="fa-brands fa-bootstrap"
+          <i class="fa-brands fa-bootstrap" data-aos="flip-down" data-aos-delay="700"
             data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Bootstrap"></i>
-          <i class="fa-brands fa-square-js"
+          <i class="fa-brands fa-square-js" data-aos="flip-down" data-aos-delay="800"
             data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="JavaScript"></i>
-          <i class="fa-brands fa-node-js"
+          <i class="fa-brands fa-node-js" data-aos="flip-down" data-aos-delay="900"
             data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="NodeJS"></i>
-          <i class="fa-brands fa-react"
+          <i class="fa-brands fa-react" data-aos="flip-down" data-aos-delay="1000"
             data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="React"></i>
-          <i class="fa-brands fa-sass"
+          <i class="fa-brands fa-sass" data-aos="flip-down" data-aos-delay="1100"
             data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Sass"></i>
         </div>
       </div>
@@ -147,8 +155,8 @@
 
       <div class="projects__box row gap-4">
 
-        <div class="projects__box--card col-md text-center">
-          <div class="projects__box--card--image">
+        <div class="projects__box--card col-md text-center" data-aos="flip-left"  data-aos-delay="500">
+          <div class="img-box">
             <img src="images/project-2.png" class="img-fluid rounded" alt="project">
           </div>
           <h4 class="my-3">Project One</h4>
@@ -158,8 +166,8 @@
           </div>
         </div>
 
-        <div class="projects__box--card col-md text-center">
-          <div class="projects__box--card--image">
+        <div class="projects__box--card col-md text-center" data-aos="flip-left"  data-aos-delay="700">
+          <div class="img-box">
             <img src="images/project-2.png" class="img-fluid rounded" alt="project">
           </div>
           <h4 class="my-3">Project Two</h4>
@@ -169,8 +177,8 @@
           </div>
         </div>
 
-        <div class="projects__box--card col-md text-center">
-          <div class="projects__box--card--image">
+        <div class="projects__box--card col-md text-center" data-aos="flip-left"  data-aos-delay="900">
+          <div class="img-box">
             <img src="images/project-2.png" class="img-fluid rounded" alt="project">
           </div>
           <h4 class="my-3">Project Three</h4>
@@ -208,8 +216,32 @@
 
   </body>
   <script src="assets/bootstrap-5.3.1/js/bootstrap.bundle.min.js"></script>
+  <script async src="https://unpkg.com/typer-dot-js@0.1.0/typer.js"></script>
   <script>
     const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
     const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+  </script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script>
+	  AOS.init();
+	</script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.24/dist/vanta.net.min.js"></script>
+  <script>
+    VANTA.NET({
+    el: "#vanta",
+    mouseControls: true,
+    touchControls: true,
+    gyroControls: false,
+    minHeight: 200.00,
+    minWidth: 200.00,
+    scale: 1.00,
+    scaleMobile: 1.00,
+    color: 0x659cff,
+    points: 5.00,
+    maxDistance: 15.00,
+    spacing: 20.00,
+    backgroundAlpha: 0.00
+    })
   </script>
 </html>
